[gd_scene load_steps=12 format=3 uid="uid://ckt8gji3nlcye"]

[ext_resource type="Script" uid="uid://8xa6rga0cc7l" path="res://player.gd" id="1_onrkg"]
[ext_resource type="Texture2D" uid="uid://ccckng3vrfels" path="res://img/player_idle.png" id="2_onrkg"]
[ext_resource type="Texture2D" uid="uid://67af4hi0b48l" path="res://img/spritesheet.png" id="3_i3pqv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i3pqv"]
size = Vector2(60, 62)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hqtel"]
size = Vector2(24, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqtel"]
atlas = ExtResource("3_i3pqv")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sweqy"]
atlas = ExtResource("3_i3pqv")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hs0m"]
atlas = ExtResource("3_i3pqv")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jxqw"]
atlas = ExtResource("3_i3pqv")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_dw050"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqtel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sweqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hs0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jxqw")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}]

[sub_resource type="Gradient" id="Gradient_i3pqv"]
offsets = PackedFloat32Array(0, 0.189573, 0.290284)
colors = PackedColorArray(0.811765, 0.564706, 0, 1, 0.780392, 0.603922, 0, 1, 0.745098, 0.65098, 0, 0.145098)

[node name="player" type="CharacterBody2D"]
collision_mask = 2
script = ExtResource("1_onrkg")

[node name="StompCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(0, -31)
shape = SubResource("RectangleShape2D_i3pqv")
disabled = true

[node name="regularCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(0, -32)
shape = SubResource("RectangleShape2D_hqtel")

[node name="StompSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(0, -32)
texture = ExtResource("2_onrkg")

[node name="animation" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -31)
sprite_frames = SubResource("SpriteFrames_dw050")
frame_progress = 0.172846

[node name="JumpParticle" type="CPUParticles2D" parent="."]
position = Vector2(-7, -21)
emitting = false
amount = 30
lifetime = 0.45
one_shot = true
explosiveness = 0.25
emission_shape = 1
emission_sphere_radius = 5.0
direction = Vector2(-20, 20)
initial_velocity_min = 123.41
initial_velocity_max = 275.14
scale_amount_max = 2.0
color = Color(1, 0.713726, 0, 1)
color_ramp = SubResource("Gradient_i3pqv")
